--- a/package.json
+++ b/package.json
@@ -1,5 +1,33 @@
 {
+  "name": "js_tnk",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --config webpack.config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Caveman21days/js_tnk.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Caveman21days/js_tnk/issues"
+  },
+  "homepage": "https://github.com/Caveman21days/js_tnk#readme",
+  "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
   "dependencies": {
-    "chai-sorted": "^0.2.0"
+    "file-loader": "^6.2.0",
+    "lodash": "^4.17.21"
   }
 }
